syntax = "proto3";

package middleware.v1;

import "middleware/jwt/v1/jwt.proto";
import "middleware/metrics/v1/metrics.proto";
import "middleware/ratelimit/v1/ratelimiter.proto";
import "middleware/selector/v1/selector.proto";
import "middleware/validator/v1/validator.proto";

option cc_enable_arenas = true;
option go_package = "github.com/origadmin/runtime/gen/go/middleware/v1;middlewarev1";
option java_multiple_files = true;
option java_outer_classname = "MiddlewareProto";
option java_package = "com.github.origadmin.runtime.middleware.v1";
option objc_class_prefix = "OMX";
option php_namespace = "OrigAdmin\\Runtime\\Middleware\\V1";

// UserMetric: used to report user-defined metrics
// Example:
//    request_count := UserMetric {
//      timestamp: 1633072800,
//      name: "request_count",
//      value: 12345,
//      labels: {
//        "service": "api_service",
//        "endpoint": "/users"
//      },
//      unit: "requests",
//      type: COUNTER,
//      description: "Number of requests to the API service",
//      context: "Production environment",
//      metadata: {
//        "region": "us-west-1",
//        "instance_id": "i-0123456789abcdef0"
//      }
//    };
//
//    response_time := UserMetric {
//      timestamp: 1633072800,
//      name: "response_time",
//      value: 0.25,
//      labels: {
//        "service": "api_service",
//        "endpoint": "/users"
//      },
//      unit: "seconds",
//      type: GAUGE,
//      description: "Average response time of the API service",
//      context: "Production environment",
//      metadata: {
//        "region": "us-west-1",
//        "instance_id": "i-0123456789abcdef0"
//      }
//    };

enum MiddlewareName {
  MIDDLEWARE_NAME_UNSPECIFIED = 0;
  LOGGING = 1;
  RECOVERY = 2;
  TRACING = 3;
  CIRCUIT_BREAKER = 4;
  METADATA = 5;
  JWT = 6;
  RATE_LIMITER = 7;
  METRICS = 8;
  VALIDATOR = 9;
  SELECTOR = 10;
  Customize = 11;
}

// Middleware middleware is used to middlewareure middleware for entry
message Middleware {
  // Metadata
  message Metadata {
    bool enabled = 1 [json_name = "enabled"];
    // Metadata prefix
    string prefix = 2 [json_name = "prefix"];
    // Metadata data
    map<string, string> data = 3 [json_name = "data"];
  }

  repeated string enabled_middlewares = 1 [json_name = "enabled_middlewares"];

  Metadata metadata = 100 [json_name = "metadata"];
  middleware.ratelimit.v1.RateLimiter rate_limiter = 101 [json_name = "rate_limiter"];
  middleware.metrics.v1.Metrics metrics = 102 [json_name = "metrics"];
  middleware.validator.v1.Validator validator = 103 [json_name = "validator"];
  middleware.jwt.v1.JWT jwt = 104 [json_name = "jwt"];
  middleware.selector.v1.Selector selector = 105 [json_name = "selector"];
}
